--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,10 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+spring.rabbitmq.listener.simple.default-requeue-rejected=false
+#spring.rabbitmq.listener.simple.retry.enabled=true
+#spring.rabbitmq.listener.simple.retry.initial-interval=3s
+#spring.rabbitmq.listener.simple.retry.max-attempts=3
+#spring.rabbitmq.listener.simple.retry.max-interval=10s
+#spring.rabbitmq.listener.simple.retry.multiplier=2
